--- a/dogScanner.html
+++ b/dogScanner.html
@@ -25,7 +25,7 @@
         <dl class="navLinks">
         </dl>
     </h1>
-    <div id=grid>
+    <div id=scannerWrapper>
         <h2 id="dog-breed">
             </h3>
             <button id="scan-button" type="button" onclick="init()">Scan My Dog</button>
