--- a/games.html
+++ b/games.html
@@ -13,7 +13,7 @@
             integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous">
             </script>
         <style>
-            @import url('http://fonts.cdnfonts.com/css/karma-2');
+            @import url('https://fonts.cdnfonts.com/css/karma-2');
         </style>
         <script>
             $(function () {
