--- a/algorithm.html
+++ b/algorithm.html
@@ -27,12 +27,15 @@
     </h1>
     <div id=grid>
         <div id=column>
+            <ul>
             <figure class="gallery__item"> <img src="assets/images/algorithm/DFS.png" class="photo">
                 <figcaption><span>Depth-first search (DFS)</span> is an algorithm for traversing a tree. It starts
                     traversing from the root node and explores as far as possible along each branch before backtracking.
-                    Usually uses <span>stack</span> to find the shortest path. In geeral, DFS is faster than
+                    Usually uses <span>stack</span> to find the shortest path. In general, DFS is faster than
                     BFS.<br><span>Time complexity: </span> O(V+E)</figcaption>
             </figure>
+            </ul>
+            <ul>
             <figure class="gallery__item">
                 <img src="assets/images/algorithm/BFS.png" class="photo">
                 <figcaption><span>Breadth-first search (BFS)</span> is an algorithm for searching a tree. It starts
@@ -41,6 +44,7 @@
                     of the child nodes that were encountered but not yet explored. It is usually a better option when
                     target is closer to source.<br> <span>Time complexity: O(V+E)</span></figcaption>
             </figure>
+        </ul>
         </div>
     </div>
     <div class="footer-dark">
